# ySEO-PRO-AI

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.py  mcp.json  package.json  pyproject.toml  test_agents.py  test_operations.py  test_quick.py
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
.kiro/steering/: seo-automation.md
config/: .env.example  default.yaml  suppress.yaml
docs/: ARCHITECTURE.md  INSTALLATION.md  TOOLS.md
docs/adr/: 0001-clean-room-external-research.md
docs/strategy/: DECISION_MAP.md  PRODUCT_ROADMAP.md
src/: __init__.py
src/adapters/: __init__.py  file_adapter.py
src/core/: __init__.py  audit_record.py  config_loader.py  crawler.py  fetcher.py  operations.py  parser.py  pipeline.py  remediation.py  report.py  sitegraph.py  suppress.py
src/crew/: __init__.py  base_agent.py  doctor_agent.py  inspector_agent.py  orchestrator.py  polyglot_agent.py  publisher_agent.py  sentinel_agent.py  strategist_agent.py
src/engine/: bridge.py
src/integrations/: __init__.py  pagespeed.py  search_console.py
src/mcp/: adapter.ts  server.ts  server_py.py
src/mcp/tools/: analyze.ts  audit.ts  competitor.ts  content.ts  crawl.ts  fix.ts  monitor.ts  multilingual.ts  performance.ts  publish.ts  schema.ts
src/modules/: __init__.py
src/modules/architect/: __init__.py  generator.py  templates.py
src/modules/citadel/: __init__.py  ai_readiness.py  schema_engine.py
src/modules/doctor/: __init__.py  fixer.py  prescriptions.py
src/modules/inspector/: __init__.py  checks.py  rules.py  scanner.py
src/modules/polyglot/: __init__.py  hreflang.py  locale.py
src/modules/publisher/: __init__.py  blog_api.py  indexnow.py
src/modules/radar/: __init__.py  opportunities.py  tracker.py
src/modules/sentinel/: __init__.py  comparator.py  snapshot.py
src/ops/: __init__.py  cli.py
tests/: conftest.py  test_benchmark.py  test_doctor.py  test_modules.py  test_operations.py  test_parser.py  test_pipeline.py  test_remediation.py
tests/fixtures/: benchmark.py
