[project]
name = "yseo-pro-ai"
version = "0.1.0"
description = "AI-powered SEO automation that audits, fixes, and grows organic traffic. MCP server + CLI for Claude, Cursor, Codex, Gemini."
authors = [{name = "Vadim Cociug", email = "vadim@ylink.pro"}]
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["seo", "mcp", "mcp-server", "ai", "automation", "audit", "multilingual", "hreflang", "schema", "indexnow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff"]

[project.urls]
Homepage = "https://github.com/cociugv/ySEO-PRO-AI"
Repository = "https://github.com/cociugv/ySEO-PRO-AI"
Issues = "https://github.com/cociugv/ySEO-PRO-AI/issues"

[project.scripts]
yseo = "src.ops.cli:main"
yseo-mcp = "src.mcp.server_py:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
